add responsive navigation

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -60,18 +60,19 @@ code {
 .header {
   font-size: 2rem;
   margin: 0;
-  padding: 2rem 6rem 0;
-  background: #1d2027 linear-gradient(45deg, #1d2027, #323e4e);
+  padding: 4rem 6rem 0;
+  background:#1f252c linear-gradient(45deg, #1f252c, #434e5c);
   // box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.3);
 
   .hero {
     padding: 8rem 0 10rem;
+    max-width: 120rem;
+    margin: 0 auto;
   }
-}
-
-.header .navigation {
-  text-align: center;
-  min-width: 55rem;
+  .navigation {
+    text-align: right;
+    min-width: 55rem;
+  }
 }
 
 .header .navigation ul li {
@@ -112,7 +113,6 @@ code {
   font-family: "Futura Pt";
   font-size: 4.5rem;
   font-weight: 100;
-  padding-top: 5rem;
   animation-name: fadeIn;
   animation-duration: 1s;
   animation-timing-function: ease-out;
@@ -120,6 +120,7 @@ code {
 
 .logo-box {
   text-align: left;
+  padding: 1rem;
 }
 
 .mobile-components-box {
@@ -209,6 +210,9 @@ code {
   .hero-message {
     font-size: 4rem;
   }
+  .mobile-components-image {
+      height: 25rem;
+  }
 }
 
 @include respond(tab-port) {
@@ -219,6 +223,10 @@ code {
     .hero {
       padding: 0;
       text-align: center;
+    }
+    .navigation {
+      text-align: center;
+      min-width: 55rem;
     }
   }
   .hero-message {
@@ -236,6 +244,7 @@ code {
   }
   .header {
     padding: 2rem 0 0 0;
+
     .hero {
       padding: 0;
     }
